--- a/indexTest.html
+++ b/indexTest.html
@@ -12,6 +12,6 @@
         <!-- Add core here -->
         <!-- Add core here -->
     </div>
-    <script src="script.js"></script>
+    <!-- Add core here // Here should be linked the JS--> 
 </body>
 </html>
